@@ -26,6 +26,10 @@
 #include <X11/XKBlib.h>
 #include <X11/Xatom.h>
 
+#if defined(_IRR_LINUX_X11_XINPUT2_)
+#include <X11/extensions/XInput2.h>
+#endif
+
 #if defined(_IRR_COMPILE_WITH_OGLES1_) || defined(_IRR_COMPILE_WITH_OGLES2_)
 #include "CEGLManager.h"
 #endif
@@ -91,6 +95,10 @@ namespace
 	Atom X_ATOM_NETWM_STATE;
 
 	Atom X_ATOM_WM_DELETE_WINDOW;
+
+#if defined(_IRR_LINUX_X11_XINPUT2_)
+	int XI_EXTENSIONS_OPCODE;
+#endif
 };
 
 namespace irr
@@ -567,6 +575,8 @@ bool CIrrDeviceLinux::createWindow()
 	Atom WMCheck = XInternAtom(XDisplay, "_NET_SUPPORTING_WM_CHECK", true);
 	if (WMCheck != None)
 		HasNetWM = true;
+
+	initXInput2();
 
 #endif // #ifdef _IRR_COMPILE_WITH_X11_
 	return true;
@@ -1103,6 +1113,28 @@ bool CIrrDeviceLinux::run()
 					XFlush (XDisplay);
 				}
 				break;
+#if defined(_IRR_LINUX_X11_XINPUT2_)
+				case GenericEvent:
+				{
+					XGenericEventCookie *cookie = &event.xcookie;
+					if (XGetEventData(XDisplay, cookie) && cookie->extension == XI_EXTENSIONS_OPCODE && XI_EXTENSIONS_OPCODE
+					&& (cookie->evtype == XI_TouchUpdate || cookie->evtype == XI_TouchBegin || cookie->evtype == XI_TouchEnd))
+					{
+						XIDeviceEvent *de = (XIDeviceEvent *) cookie->data;
+
+						irrevent.EventType = EET_TOUCH_INPUT_EVENT;
+
+						irrevent.TouchInput.Event = cookie->evtype == XI_TouchUpdate ? ETIE_MOVED : (cookie->evtype == XI_TouchBegin ? ETIE_PRESSED_DOWN : ETIE_LEFT_UP);
+
+						irrevent.TouchInput.ID = de->detail;
+						irrevent.TouchInput.X = de->event_x;
+						irrevent.TouchInput.Y = de->event_y;
+
+						postEventFromUser(irrevent);
+					}
+				}
+				break;
+#endif
 
 			default:
 				break;
@@ -1985,6 +2017,62 @@ void CIrrDeviceLinux::initXAtoms()
 	X_ATOM_NETWM_MAXIMIZE_VERT = XInternAtom(XDisplay, "_NET_WM_STATE_MAXIMIZED_VERT", true);
 	X_ATOM_NETWM_MAXIMIZE_HORZ = XInternAtom(XDisplay, "_NET_WM_STATE_MAXIMIZED_HORZ", true);
 	X_ATOM_NETWM_STATE = XInternAtom(XDisplay, "_NET_WM_STATE", true);
+#endif
+}
+
+void CIrrDeviceLinux::initXInput2()
+{
+#if defined(_IRR_LINUX_X11_XINPUT2_)
+	int ev=0;
+	int err=0;
+	if (!XQueryExtension(XDisplay, "XInputExtension", &XI_EXTENSIONS_OPCODE, &ev, &err))
+	{
+		os::Printer::log("X Input extension not available.", ELL_WARNING);
+		return;
+	}
+
+	int major = 2;
+	int minor = 3;
+	int rc = XIQueryVersion(XDisplay, &major, &minor);
+	if ( rc != Success )
+	{
+		os::Printer::log("No XI2 support.", ELL_WARNING);
+		return;
+	}
+
+	int cnt = 0;
+	XIDeviceInfo *di = XIQueryDevice(XDisplay, XIAllDevices, &cnt);
+	if ( di )
+	{
+		for (int i = 0; i < cnt; ++i)
+		{
+			bool hasTouchClass = false;
+			XIDeviceInfo *dev = &di[i];
+			for (int j = 0; j < dev->num_classes; ++j)
+			{
+				if (dev->classes[j]->type == XITouchClass)
+				{
+					hasTouchClass = true;
+					break;
+				}
+			}
+			if ( hasTouchClass )
+			{
+				XIEventMask eventMask;
+				unsigned char mask[XIMaskLen(XI_TouchEnd)];
+				memset(mask, 0, sizeof(mask));
+				eventMask.deviceid = dev->deviceid;
+				eventMask.mask_len = sizeof(mask);
+				eventMask.mask = mask;
+				XISetMask(eventMask.mask, XI_TouchBegin);
+				XISetMask(eventMask.mask, XI_TouchUpdate);
+				XISetMask(eventMask.mask, XI_TouchEnd);
+
+				XISelectEvents(XDisplay, XWindow, &eventMask, 1);
+			}
+		}
+		XIFreeDeviceInfo(di);
+	}
 #endif
 }
 
